--- a/ZPG1/ZPG1.vcxproj
+++ b/ZPG1/ZPG1.vcxproj
@@ -68,6 +68,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Controller.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -79,12 +80,15 @@
     <ClInclude Include="bedna.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Controller.h" />
     <ClInclude Include="opengl_helper.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="worker.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram4.cd" />
+    <None Include="ClassDiagram41.cd" />
     <None Include="FragmentShader.glsl" />
     <None Include="VertexShader.glsl" />
   </ItemGroup>
