--- a/ZPG1/ZPG1.vcxproj.filters
+++ b/ZPG1/ZPG1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Controller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ShaderLoader.h">
@@ -59,6 +62,9 @@
     <ClInclude Include="bedna.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Controller.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShader.glsl">
@@ -67,5 +73,7 @@
     <None Include="FragmentShader.glsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="ClassDiagram4.cd" />
+    <None Include="ClassDiagram41.cd" />
   </ItemGroup>
 </Project>
