Last working version
Testing now with new light class
added all models

--- a/ZPG1/ZPG1.vcxproj
+++ b/ZPG1/ZPG1.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Drawable.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -78,15 +79,19 @@
   <ItemGroup>
     <ClInclude Include="AbstractObserver.h" />
     <ClInclude Include="AbstractSubject.h" />
-    <ClInclude Include="bedna.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Drawable.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="modely\bedna.h" />
+    <ClInclude Include="modely\sphere.h" />
+    <ClInclude Include="modely\suzi_flat.h" />
+    <ClInclude Include="modely\suzi_smooth.h" />
+    <ClInclude Include="modely\worker.h" />
     <ClInclude Include="opengl_helper.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderLoader.h" />
-    <ClInclude Include="worker.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
