--- a/ZPG1/ZPG1.vcxproj
+++ b/ZPG1/ZPG1.vcxproj
@@ -77,18 +77,20 @@
     <ClCompile Include="ShaderLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AbstractObserver.h" />
-    <ClInclude Include="AbstractSubject.h" />
+    <ClInclude Include="OnChangeCameraObserver.h" />
+    <ClInclude Include="OnChangeCameraSubject.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="Light.h" />
-    <ClInclude Include="modely\bedna.h" />
-    <ClInclude Include="modely\sphere.h" />
-    <ClInclude Include="modely\suzi_flat.h" />
-    <ClInclude Include="modely\suzi_smooth.h" />
-    <ClInclude Include="modely\worker.h" />
+    <ClInclude Include="models\bedna.h" />
+    <ClInclude Include="models\sphere.h" />
+    <ClInclude Include="models\suzi_flat.h" />
+    <ClInclude Include="models\suzi_smooth.h" />
+    <ClInclude Include="models\worker.h" />
+    <ClInclude Include="OnChangeLightObserver.h" />
+    <ClInclude Include="OnChangeLightSubject.h" />
     <ClInclude Include="opengl_helper.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderLoader.h" />
