--- a/ZPG1/ZPG1.vcxproj.filters
+++ b/ZPG1/ZPG1.vcxproj.filters
@@ -53,12 +53,6 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AbstractObserver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="AbstractSubject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -71,22 +65,34 @@
     <ClInclude Include="Drawable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="modely\sphere.h">
-      <Filter>models</Filter>
-    </ClInclude>
-    <ClInclude Include="modely\suzi_flat.h">
-      <Filter>models</Filter>
-    </ClInclude>
-    <ClInclude Include="modely\suzi_smooth.h">
-      <Filter>models</Filter>
-    </ClInclude>
-    <ClInclude Include="modely\worker.h">
-      <Filter>models</Filter>
-    </ClInclude>
-    <ClInclude Include="modely\bedna.h">
-      <Filter>models</Filter>
-    </ClInclude>
     <ClInclude Include="Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="models\bedna.h">
+      <Filter>models</Filter>
+    </ClInclude>
+    <ClInclude Include="models\sphere.h">
+      <Filter>models</Filter>
+    </ClInclude>
+    <ClInclude Include="models\suzi_flat.h">
+      <Filter>models</Filter>
+    </ClInclude>
+    <ClInclude Include="models\suzi_smooth.h">
+      <Filter>models</Filter>
+    </ClInclude>
+    <ClInclude Include="models\worker.h">
+      <Filter>models</Filter>
+    </ClInclude>
+    <ClInclude Include="OnChangeCameraSubject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OnChangeCameraObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OnChangeLightObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OnChangeLightSubject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
