--- a/ZPG1/ZPG1.vcxproj
+++ b/ZPG1/ZPG1.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="ShaderLoader.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="FragmentShader.glsl" />
     <None Include="VertexShader.glsl" />
   </ItemGroup>
