--- a/ZPG1/ZPG1.vcxproj.filters
+++ b/ZPG1/ZPG1.vcxproj.filters
@@ -103,5 +103,6 @@
     <None Include="FragmentShader.glsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
