--- a/ZPG1/ZPG1.vcxproj
+++ b/ZPG1/ZPG1.vcxproj
@@ -69,7 +69,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Controller.cpp" />
-    <ClCompile Include="Drawable.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Application.cpp" />
@@ -83,7 +83,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Controller.h" />
-    <ClInclude Include="Drawable.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="models\bedna.h" />
     <ClInclude Include="models\sphere.h" />
