--- a/ZPG1/ZPG1.vcxproj
+++ b/ZPG1/ZPG1.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
+    <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +135,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderLoader.h" />
+    <ClInclude Include="Skybox.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
@@ -141,13 +143,13 @@
     <None Include="ClassDiagram.cd" />
     <None Include="ClassDiagram3.cd" />
     <None Include="ClassDiagram31.cd" />
-    <None Include="FragmentShader.glsl" />
+    <None Include="Skybox-FS.glsl" />
     <None Include="Lambert-FS.glsl" />
     <None Include="Lambert-VS.glsl" />
     <None Include="models\fels.3ds" />
     <None Include="Phong-FS.glsl" />
     <None Include="Phong-VS.glsl" />
-    <None Include="VertexShader.glsl" />
+    <None Include="Skybox-VS.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\wall.jpg" />
