--- a/ZPG1/ZPG1.vcxproj.filters
+++ b/ZPG1/ZPG1.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="AssimpMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Skybox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -155,14 +158,11 @@
     <ClInclude Include="AssimpMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Skybox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="VertexShader.glsl">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="FragmentShader.glsl">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="Lambert-FS.glsl">
       <Filter>Resource Files</Filter>
     </None>
@@ -181,6 +181,12 @@
       <Filter>models</Filter>
     </None>
     <None Include="ClassDiagram31.cd" />
+    <None Include="Skybox-FS.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Skybox-VS.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\wall.jpg">
